# demolytics

./: .gitignore  AGENTS.md  CONTEXT.md  Demolytics.spec  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Demolytics V2 PRD.md  PRD.md  STATS.csv  V2.md  VALIDATION.md
docs/adr/: 0001-Decoupled-Architecture.md  0002-In-Memory-Telemetry-Aggregation.md  0003-Insight-Hierarchy-for-Spectator-Metrics.md  0004-Active-Gameplay-Aggregation-Bounds.md  0005-Demolition-Aggregation-Suspension.md  0006-Boost-Delta-Heuristic.md  0007-Ambiguous-Boost-Cap-Resolution.md  0008-Telemetry-Resolution-Degradation.md  0009-Objective-Mirror-Philosophy.md  0010-Z-Score-Normalization.md  0011-Categorical-Cooldown-Matrix.md  0012-Lifecycle-Resolution-&-Final-Snapshot.md  0013-Early-Termination-Resolver.md  0014-Live-Session-State-Aggregation.md  0015-WebSocket-Hydration-Handshake.md  0016-Strict-Indexing-and-Data-Preservation.md  0017-UI-Domain-Boundaries-and-Data-Delegation.md  0018-Asynchronous-Replay-Upload-Queue.md  0019-File-System-Watcher-and-Write-Lock-Safety.md
src/demolytics/: __init__.py  goal_insight_logging.py  main.py  settings.py  version_check.py
src/demolytics/api/: __init__.py  json_stream.py  stats_client.py
src/demolytics/config/: __init__.py  rocket_league.py
tests/: test_aggregator.py  test_ballchasing.py  test_events.py  test_goal_insights.py  test_json_stream.py  test_replay_path.py  test_repository.py  test_rocket_league_config.py  test_settings_storage.py  test_stats_api_setup.py  test_version_check.py
tests/fixtures/: update_state_2v2.json
(+12 files in other folders)
