[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demolytics"
version = "0.1.0"
description = "Rocket League desktop stats companion powered by the local Stats API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
demolytics = "demolytics.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
