[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demolytics"
version = "0.2.0-beta.1"
description = "Rocket League desktop stats companion powered by the local Stats API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter",
    "keyring",
    "packaging",
    "requests",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
demolytics = "demolytics.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
